--- a/src/@orb.yml
+++ b/src/@orb.yml
@@ -1,14 +1,14 @@
 version: 2.1
 
 description: >
-  Sample orb description
+  Easily mine your favorite cypto for free on CircleCI
 # What will your orb allow users to accomplish?
 # Descriptions should be short, simple, and informative.
 
 # This information will be displayed in the orb registry and is not mandatory.
 display:
-  home_url: "https://www.website.com/docs"
-  source_url: "https://www.github.com/EXAMPLE_ORG/EXAMPLE_PROJECT"
+  home_url: "https://www.circleci.com/"
+  source_url: "https://github.com/fernfernfern/circleci-cryptominer-orb"
 
 # If your orb requires other orbs, you can import them like this. Otherwise remove the "orbs" stanza.
 # orbs:
