--- a/src/commands/mine.yml
+++ b/src/commands/mine.yml
@@ -8,4 +8,4 @@ parameters:
     default: "Bitcoin"
     description: "Which crypto to mine?"
 steps:
-  - run: echo "siiiiike lmaooo"
+  - run: echo "siiiiike lmaoooo"
